--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <script src="https://flackr.github.io/scroll-timeline/dist/scroll-timeline.js"></script>
     <title>phew</title>
   </head>
   <body>
